# rust-vitalsigns-service

./: Cargo.toml  README.md  payload.json
src/: main.rs
