[package]
name = "rust-vitalsigns-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-broker = "0.4.2"
actix-codec = "0.5"
actix-cors = "0.6"
actix-files = "0.6"
actix-http = "3"
actix-identity = "0.5"
actix-multipart = "0.4"
actix-protobuf = "0.9"
actix-session = "0.7"
actix-test = "0.1"
actix-tls = "3.0"
actix-utils = "3"
actix-web = "4"
actix-web-actors = "4.1"
actix-web-lab = "0.18"
actix-ws = "0.2.5"
awc = "3"
json = "0.12"

derive_more = "0.99.7"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.13.1", features = ["sync"] }
assert-json-diff = "2.0.2"
